--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,39 @@
             <version>2.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
+
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.1</version>
+                <configuration>
+                    <url>http://aws.xiongyingqi.com/manager/text</url>
+                    <server>tomcat8-manager</server>
+                    <username>deployer</username>
+                    <password>XiongYingqi</password>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>tomcat-maven-plugin</artifactId>
+                <version>1.1</version>
+                <configuration>
+                    <url>http://aws.xiongyingqi.com/manager/text</url>
+                    <server>tomcat8-manager</server>
+                    <username>deployer</username>
+                    <password>XiongYingqi</password>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
